<?xml version='1.0' encoding='UTF-8'?>

<!--
  Licensed to the Apache Software Foundation (ASF) under one
  or more contributor license agreements. See the NOTICE file
  distributed with this work for additional information
  regarding copyright ownership. The ASF licenses this file
  to you under the Apache License, Version 2.0 (the
  "License"); you may not use this file except in compliance
  with the License. You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing,
  software distributed under the License is distributed on an
  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  KIND, either express or implied. See the License for the
  specific language governing permissions and limitations
  under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.soebes.smpp</groupId>
    <artifactId>smpp</artifactId>
    <version>6.0.6</version>
    <relativePath />
  </parent>

  <groupId>com.soebes.itf.jupiter.extension</groupId>
  <artifactId>itf-extension</artifactId>
  <version>0.14.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <scm>
    <connection>scm:git:https://github.com/khmarbaise/maven-it-extension.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/khmarbaise/maven-it-extension.git</developerConnection>
    <url>https://github.com/khmarbaise/maven-it-extension</url>
    <tag>HEAD</tag>
  </scm>

  <distributionManagement>
    <site>
      <id>github</id>
      <url>scm:git:ssh://git@github.com/khmarbaise/maven-it-extension.git</url>
    </site>
  </distributionManagement>

  <properties>
    <maven.compiler.release>8</maven.compiler.release>
    <maven.compiler.testRelease>17</maven.compiler.testRelease>
    <smpp.component>maven-it-extension</smpp.component>
    <!--
     ! Currently, javadoc fails based on module without test sources
    -->
    <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
    <!--
     ! full stack trace output in tests. 
    -->
    <trimStackTrace>false</trimStackTrace>
    <automatic-module-name>com.soebes.itf.extension</automatic-module-name>
    <maven-plugin-plugin.version>3.10.2</maven-plugin-plugin.version>
    <maven-resolver.version>1.9.18</maven-resolver.version>
    <!-- The minimum maven version we expect to build with. -->
    <minimum.maven.version>3.8.1</minimum.maven.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>net.bytebuddy</groupId>
        <artifactId>byte-buddy</artifactId>
        <version>1.14.15</version>
      </dependency>
      <dependency>
        <groupId>net.bytebuddy</groupId>
        <artifactId>byte-buddy-agent</artifactId>
        <version>1.14.15</version>
      </dependency>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.1</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-bom</artifactId>
        <version>3.25.1</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-bom</artifactId>
        <version>5.12.0</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>nl.jqno.equalsverifier</groupId>
        <artifactId>equalsverifier</artifactId>
        <version>3.15.5</version>
      </dependency>
      <dependency>
        <groupId>com.github.marschall</groupId>
        <artifactId>memoryfilesystem</artifactId>
        <version>2.8.0</version>
      </dependency>
      <dependency>
        <groupId>org.apiguardian</groupId>
        <artifactId>apiguardian-api</artifactId>
        <version>1.1.2</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-model</artifactId>
        <version>3.8.1</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.resolver</groupId>
        <artifactId>maven-resolver-api</artifactId>
        <version>${maven-resolver.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.resolver</groupId>
        <artifactId>maven-resolver-util</artifactId>
        <version>${maven-resolver.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <compilerArgs combine.self="append">
              <arg>-Xlint:-options</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <configuration>
            <archive>
              <manifestEntries>
                <Automatic-Module-Name>${automatic-module-name}</Automatic-Module-Name>
              </manifestEntries>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <configuration>
            <show>package</show>
            <tags>
              <tag>
                <name>implNote</name>
                <placement>a</placement>
                <head>Implementation Note:</head>
              </tag>
              <tag>
                <name>implSpec</name>
                <placement>a</placement>
                <head>Implementation Requirements:</head>
              </tag>
            </tags>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-plugin-plugin</artifactId>
          <version>${maven-plugin-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.asciidoctor</groupId>
          <artifactId>asciidoctor-maven-plugin</artifactId>
          <version>3.0.0</version>
          <dependencies>
            <dependency>
              <groupId>org.asciidoctor</groupId>
              <artifactId>asciidoctorj-pdf</artifactId>
              <version>2.3.15</version>
            </dependency>
            <dependency>
              <groupId>org.asciidoctor</groupId>
              <artifactId>asciidoctorj</artifactId>
              <version>3.0.0-alpha.2</version>
            </dependency>
            <dependency>
              <groupId>org.asciidoctor</groupId>
              <artifactId>asciidoctorj-diagram</artifactId>
              <version>2.3.0</version>
            </dependency>
          </dependencies>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.rat</groupId>
        <artifactId>apache-rat-plugin</artifactId>
        <configuration>
          <excludes combine.children="append">
            <exclude>.github/ISSUE_TEMPLATE/feature_request.md</exclude>
            <exclude>.github/ISSUE_TEMPLATE/bug_report.md</exclude>
            <exclude>.github/ISSUE_TEMPLATE/config.yml</exclude>
            <exclude>IDEASetup.xml</exclude>
            <exclude>**/.invisible-file</exclude><!-- Only used in ITs. -->
            <exclude>.repository/**</exclude><!-- Jenkins job with local Maven repository -->
            <exclude>.repo/**</exclude><!-- Jenkins job with local Maven repository -->
	    <exclude>.mvn/**</exclude><!-- Maven Configuration Directory -->
            <exclude>.maven/spy.log</exclude><!-- Hudson Maven3 integration log -->
	    <exclude>.mvn/*</exclude><!-- Maven Configuration -->
            <exclude>dependency-reduced-pom.xml</exclude><!-- Maven shade plugin -->
            <exclude>.asf.yaml</exclude><!-- GitHub Support -->
            <exclude>.java-version</exclude>
            <exclude>src/test/resources/**</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <id>rat-check</id>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>
            @{argLine}
            -XX:+EnableDynamicAgentLoading
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <configuration>
          <argLine>
            @{argLine}
            -XX:+EnableDynamicAgentLoading
          </argLine>
        </configuration>
      </plugin>

    </plugins>
  </build>

  <modules>
    <module>itf-maven-plugin</module>
    <module>itf-failure-plugin</module>
    <module>itf-jupiter-extension</module>
    <module>itf-assertj</module>
    <module>itf-extension-maven</module>
    <module>itf-examples</module>
    <module>itf-documentation</module>
  </modules>


</project>
